--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JsAudio is to Node / JS as PyAudio is to Python",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/ava test/test.js"
+    "test": "standard && ava test/test.js --verbose"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "readable-stream": "^3.3.0"
   },
   "devDependencies": {
-    "ava": "^1.4.1"
+    "ava": "^1.4.1",
+    "standard": "^12.0.1"
   }
 }
